# simpleDBMS-Client

./: .gitignore  CMakeLists.txt  CMakeUserPresets-template.json  README.md  spec.md  vcpkg.json  项目调研.docx
.codex_tmp_docx/unzipped/docProps/: app.xml  core.xml
.codex_tmp_docx/unzipped/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
.qwen/: settings.json
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/debug/: DebugLogWidget.cpp  DebugLogWidget.h  DebugWidgetSwitchWidget.cpp  DebugWidgetSwitchWidget.h  DebugWindow.cpp  DebugWindow.h
src/models/directory/: DatabaseDirectory.cpp  DatabaseDirectory.h  FieldDirectory.cpp  FieldDirectory.h  TableDirectory.cpp  TableDirectory.h
src/models/network/: NetData.cpp  NetData.h  NetworkTransferData.cpp  NetworkTransferData.h  NetworkTransferData_doc_new.md  NetworkTransferData说明文档.md  SqlData.cpp  SqlData.h
src/network/: NetReceiver.cpp  NetReceiver.h  NetSender.cpp  NetSender.h  NetworkManager.cpp  NetworkManager.h
src/ui/: AuthWidget.cpp  AuthWidget.h  ContentWidget.cpp  ContentWidget.h  OpePanelWidget.cpp  OpePanelWidget.h  SettingWidget.cpp  SettingWidget.h  ThemeManager.h  TopNavigationWidget.cpp  TopNavigationWidget.h
src/ui/opePanel/: ActivityBarWidget.cpp  ActivityBarWidget.h  AiPanelWidget.cpp  AiPanelWidget.h  DirectoryWidget.cpp  DirectoryWidget.h  EditorWidget.cpp  EditorWidget.h  FileWidget.cpp  FileWidget.h  LineNumberArea.cpp  LineNumberArea.h  LogWidget.cpp  LogWidget.h  SidePanelContainer.cpp  SidePanelContainer.h  SqlEditor.cpp  SqlEditor.h  SqlHighlighter.cpp  SqlHighlighter.h  TableWidget.cpp  TableWidget.h  TerminalWidget.cpp  TerminalWidget.h  lineNumberArea.cpp  lineNumberArea.h  sqlEditor.cpp  sqlEditor.h  sqlHighlighter.cpp  sqlHighlighter.h
